# wasm-pack-bug

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
