[package]
name = "wasm-pack-example"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", branch = "master" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen.git", branch = "master" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen.git", branch = "master" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
