[package]
name = "wasm-pack-example"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "e0ad7bfe" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "e0ad7bfe" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "e0ad7bfe" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
